fix button spacing

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -344,6 +344,7 @@ p {
   background-color: #87221E;
   width: 200px;
   height: 30px;
+  margin-top: 15px;
 }
 
 .plant-update-form {
